# google-authenticator-extractor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build.sh
.github/workflows/: build-docker.yml  build-macos.yml  build-ubuntu.yml  build.yml  release.yml
protos/: google_auth.proto
scripts/: build.sh  release.sh
scripts/macosx/: build.sh  install.sh  release.sh
scripts/ubuntu/: build.sh  install.sh
src/: lib.rs  main.rs
src/protos/: google_auth.rs  mod.rs
test/: command_test.sh
tests/: command_test.rs  command_test.sh
ubuntu/: install.sh
