[package]
name = "google_authenticator_extractor"
version = "0.0.1"
authors = ["Yuan Zhang <zhangyuan@users.noreply.github.com>"]
edition = "2018"

[[bin]]
path = "dummy.rs"
name = "google_authenticator_extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rqrr = { version = "0.3.1" }
protobuf = { version = "2.0" }
base64 = "0.13.0"
urlencoding = "1.1.1"
base32 = "0.4.0"
structopt = { version = "0.3"}
serde_json = { version = "1"}
serde = {version = "1", features = ["derive"] }

[build-dependencies]
protoc-rust = "2.0"
